[gd_scene load_steps=3 format=3 uid="uid://dagu06p8qd6gg"]

[ext_resource type="Script" path="res://Scenes/innerMenus/innerMenuScript.gd" id="1_22w3a"]
[ext_resource type="Texture2D" uid="uid://bq8arwc8uwrp1" path="res://imgs/1f5d7f566145ab4361f31a36ba80bb3.jpg" id="2_k34gm"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1059.0
offset_top = -380.0
offset_right = -1177.0
offset_bottom = -458.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22w3a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 755.0
offset_top = 320.0
offset_right = 825.0
offset_bottom = 421.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_k34gm")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect"]
layout_mode = 2
offset_left = 1004.0
offset_top = 651.0
offset_right = 1614.0
offset_bottom = 1191.0

[node name="Random" type="Button" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "RANDOM"

[node name="Fixed" type="Button" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0.843137)
theme_override_font_sizes/font_size = 90
text = "FIXED"

[node name="Back" type="Button" parent="MarginContainer/TextureRect"]
layout_mode = 2
offset_left = 1882.0
offset_top = 975.0
offset_right = 2079.0
offset_bottom = 1068.0
theme_override_font_sizes/font_size = 60
text = "BACK"

[node name="Label" type="Label" parent="MarginContainer/TextureRect"]
layout_mode = 2
offset_left = 845.0
offset_top = 445.0
offset_right = 1786.0
offset_bottom = 569.0
theme_override_font_sizes/font_size = 90
text = "CHOOSE GAME MODE: "

[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/Random" to="." method="_on_random_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/Fixed" to="." method="_on_fixed_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/Back" to="." method="_on_back_pressed"]
